# MLOps-General-Practice

./: .env-example  .gitignore  LICENSE  README.md  data.dvc  dvc.yaml  inference.py  main.py  pyproject.toml
.dvc/: config
artifacts/: LogisticRegression_C-1.0_max_iter-1000_random_state-42.joblib  RandomForestClassifier_n_estimators-100_max_depth-5_random_state-42.joblib
config/: model.yaml  paths.yaml
notebooks/: pipeline.ipynb
outputs/2026-04-24/12-18-03/.hydra/: hydra.yaml
outputs/2026-04-24/12-18-46/.hydra/: hydra.yaml
outputs/2026-04-28/11-37-03/.hydra/: hydra.yaml
outputs/2026-04-28/11-37-56/.hydra/: hydra.yaml
outputs/2026-04-28/11-38-57/.hydra/: hydra.yaml
outputs/2026-04-28/11-39-27/.hydra/: hydra.yaml
outputs/2026-04-28/11-46-30/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-29/11-16-45/.hydra/: hydra.yaml
outputs/2026-04-29/11-17-11/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-29/11-18-09/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-29/11-20-28/.hydra/: hydra.yaml
outputs/2026-04-29/11-23-46/.hydra/: hydra.yaml
outputs/2026-04-29/11-25-38/.hydra/: hydra.yaml
outputs/2026-04-29/11-35-24/.hydra/: hydra.yaml
outputs/2026-04-29/11-38-10/.hydra/: hydra.yaml
outputs/2026-04-29/11-43-17/.hydra/: hydra.yaml
outputs/2026-04-29/11-48-21/.hydra/: hydra.yaml
outputs/2026-04-29/12-21-42/.hydra/: hydra.yaml
src/: batch_predict.py  evaluate.py  inference.py  preprossesor.py  promote_model.py  run_preprocess.py  seed_motherduck.py  serve.py  train.py
src/saving_loading/: load_data.py  save_model.py  save_preprocessing.py
(+75 files in other folders)
