[project]
name = "mlops-general-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
]
